--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -10,7 +10,7 @@ env:
   USE_BAZEL_VERSION: 7.2.1
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - name: Search for duplicated error codes
@@ -23,11 +23,14 @@ jobs:
       - name: Install JDK and ZMQ
         run: |
           sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk libzmq3-dev
+          sudo apt-get install -y openjdk-11-jdk libzmq3-dev python3
       - name: Build
         run: |
           bazel build --lockfile_mode=off --config no-tty -c dbg --config python --config fast-binary --verbose_failures
         working-directory: ./exaudfclient/
+        env:
+          - PYTHON3_PREFIX: /usr
+          - PYTHON3_VERSION: python3.10
 
   tests:
     runs-on: ubuntu-latest
