--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   USE_BAZEL_VERSION: 7.2.1
+  UDF_CLIENT_ENV_FILE: /tmp/.udf_client_env
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -16,26 +17,14 @@ jobs:
       - name: Search for duplicated error codes
         run: bash find_duplicate_error_codes.sh
 
-      - name: Install bazel
-        run: | 
-          curl -L -o bazel https://github.com/bazelbuild/bazelisk/releases/download/v1.19.0/bazelisk-linux-amd64
-          chmod +x bazel
-      - name: Install JDK and ZMQ
+      - name: Install UDF Client Dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk libzmq3-dev python3 protobuf-compiler
+          bash scripts/installUdfClientDeps.sh "$UDF_CLIENT_ENV_FILE"
       - name: Build
         run: |
-          bazel build --lockfile_mode=off --config no-tty -c dbg --config python --config fast-binary --verbose_failures
+          source "$UDF_CLIENT_ENV_FILE"
+          bazel build --lockfile_mode=off --config no-tty -c dbg --config python --config java --config fast-binary --verbose_failures
         working-directory: ./exaudfclient/
-        env:
-          PYTHON3_PREFIX: /usr
-          PYTHON3_VERSION: python3.10
-          ZMQ_LIBRARY_PREFIX: /usr/lib/x86_64-linux-gnu/
-          ZMQ_INCLUDE_PREFIX: /usr/include
-          PROTOBUF_LIBRARY_PREFIX: /usr/lib/x86_64-linux-gnu
-          PROTOBUF_INCLUDE_PREFIX: /usr/include/
-          PROTOBUF_BIN: /usr/bin/protoc
 
   tests:
     runs-on: ubuntu-latest
@@ -75,16 +64,12 @@ jobs:
             name: "script_options_parser_legacy_with_asan"
     steps:
       - uses: actions/checkout@v4
-      - name: Install bazel
-        run: | 
-          curl -L -o bazel https://github.com/bazelbuild/bazelisk/releases/download/v1.19.0/bazelisk-linux-amd64
-          chmod +x bazel
-      - name: Install JDK and ZMQ
+      - name: Install UDF Client Dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk libzmq3-dev valgrind
+          bash scripts/installUdfClientDeps.sh "$UDF_CLIENT_ENV_FILE"
       - name: Run tests
         run: |
+          source "$UDF_CLIENT_ENV_FILE"
           bazel test ${{ matrix.additional_args }} ${{ matrix.test }}
         working-directory: ./exaudfclient/
 
