--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -64,9 +64,19 @@ jobs:
             name: "script_options_parser_legacy_with_asan"
     steps:
       - uses: actions/checkout@v4
-      - name: Install UDF Client Dependencies
+      - name: Install JDK and ZMQ
         run: |
-          sudo bash scripts/installUdfClientDeps.sh "$UDF_CLIENT_ENV_FILE"
+          sudo apt-get update
+          sudo apt-get install -y openjdk-11-jdk libzmq3-dev valgrind
+      - name: Install bazel
+        run: | 
+          BAZEL_PACKAGE_FILE="bazel_$BAZEL_PACKAGE_VERSION-linux-x86_64.deb"
+          BAZEL_PACKAGE_URL="https://github.com/bazelbuild/bazel/releases/download/$BAZEL_PACKAGE_VERSION/$BAZEL_PACKAGE_FILE"
+          curl -L --output /tmp/"$BAZEL_PACKAGE_FILE" "$BAZEL_PACKAGE_URL"
+          apt install -y "/tmp/$BAZEL_PACKAGE_FILE"
+          rm "/tmp/$BAZEL_PACKAGE_FILE"
+        env:
+          BAZEL_PACKAGE_VERSION: "7.2.1"
       - name: Run tests
         run: |
           source "$UDF_CLIENT_ENV_FILE"
