--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -73,7 +73,7 @@ jobs:
           BAZEL_PACKAGE_FILE="bazel_$BAZEL_PACKAGE_VERSION-linux-x86_64.deb"
           BAZEL_PACKAGE_URL="https://github.com/bazelbuild/bazel/releases/download/$BAZEL_PACKAGE_VERSION/$BAZEL_PACKAGE_FILE"
           curl -L --output /tmp/"$BAZEL_PACKAGE_FILE" "$BAZEL_PACKAGE_URL"
-          apt install -y "/tmp/$BAZEL_PACKAGE_FILE"
+          sudo apt install -y "/tmp/$BAZEL_PACKAGE_FILE"
           rm "/tmp/$BAZEL_PACKAGE_FILE"
         env:
           BAZEL_PACKAGE_VERSION: "7.2.1"
