--- a/aws-code-build/ci/buildspec.yaml
+++ b/aws-code-build/ci/buildspec.yaml
@@ -6,6 +6,13 @@ version: 0.2
 batch:
   fast-fail: false
   build-graph:
+    - identifier: build_template_Exasol_all_java_17
+      env:
+        variables:
+          FLAVOR: template-Exasol-all-java-17
+        compute-type: BUILD_GENERAL1_MEDIUM
+        privileged-mode: true
+      buildspec: ./aws-code-build/ci/build_buildspec.yaml
     - identifier: build_template_Exasol_all_python_310
       env:
         variables:
