--- a/exaudfclient/base/javacontainer/script_options/test/BUILD
+++ b/exaudfclient/base/javacontainer/script_options/test/BUILD
@@ -1,7 +1,7 @@
 
 cc_test(
     name = "java-script-options-tests",
-    srcs = ["ctpg_script_importer_test.cc", "swig_factory_test.cc", "swig_factory_test.h"],
+    srcs = ["ctpg_script_importer_test.cc", "swig_factory_test.cc", "swig_factory_test.h", "string_ops_tests.cc"],
     deps = [
         "//base/javacontainer/script_options:java_script_option_lines",
         "@googletest//:gtest_main",
