Strategy pattern for Extractor
1. Splitted up Converter into Legacy and V2
2. Splitted up Extractor into Interface and Implementation
3. JavaContainerBuilder now instantiates Extractor instead of parser.

--- a/exaudfclient/base/javacontainer/script_options/BUILD
+++ b/exaudfclient/base/javacontainer/script_options/BUILD
@@ -3,8 +3,11 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "java_script_option_lines",
-    hdrs = [":extractor.h", ":parser_legacy.h", ":parser_ctpg.h"],
-    srcs = [":parser.h", ":converter.h", ":converter.cc", ":parser_legacy.cc", ":extractor.cc",
+    hdrs = [":extractor.h", ":extractor_impl.h", ":parser_legacy.h", ":parser_ctpg.h",
+            ":converter_v2.h", ":converter_legacy.h"],
+    srcs = [":parser.h", ":converter.h", ":converter.cc", ":parser_legacy.cc", ":extractor_impl.h",
+            ":extractor_impl.cc", ":converter_legacy.cc", ":converter_legacy.h",
+            ":converter_v2.cc", ":converter_v2.h",
             ":keywords.h", ":keywords.cc", ":checksum.h", ":checksum.cc", ":parser_ctpg.cc",
             ":parser_ctpg_script_importer.cc", ":parser_ctpg_script_importer.h", ":string_ops.h", ":string_ops.cc"],
     deps = ["@ssl//:ssl", "//base/script_options_parser/legacy:script_option_lines_parser_legacy",
