--- a/exaudfclient/base/javacontainer/script_options/test/BUILD
+++ b/exaudfclient/base/javacontainer/script_options/test/BUILD
@@ -8,3 +8,11 @@ cc_test(
     ],
 )
 
+cc_test(
+    name = "javacontainer-test-converter",
+    srcs =  ["converter_test.cc"],
+    deps = [
+        "//base/javacontainer/script_options:java_script_option_lines",
+        "@googletest//:gtest_main",
+    ],
+)
