Implemented Quoting and Correct Order for JARs
1. Use std::vector for collecting JARs in converter v2
2. Implemented StringOps::removeQuotesSafely() + tests
3. Use StringOps::removeQuotesSafely() for JARs

--- a/exaudfclient/base/javacontainer/script_options/test/BUILD
+++ b/exaudfclient/base/javacontainer/script_options/test/BUILD
@@ -1,16 +1,8 @@
 
 cc_test(
     name = "java-script-options-tests",
-    srcs = ["ctpg_script_importer_test.cc", "swig_factory_test.cc", "swig_factory_test.h", "string_ops_tests.cc"],
-    deps = [
-        "//base/javacontainer/script_options:java_script_option_lines",
-        "@googletest//:gtest_main",
-    ],
-)
-
-cc_test(
-    name = "javacontainer-test-converter",
-    srcs =  ["converter_test.cc"],
+    srcs = ["ctpg_script_importer_test.cc", "swig_factory_test.cc", "swig_factory_test.h",
+            "string_ops_tests.cc", "converter_test.cc"],
     deps = [
         "//base/javacontainer/script_options:java_script_option_lines",
         "@googletest//:gtest_main",
