--- a/flavors/test-Exasol-8-cuda-ml/flavor_base/flavor_test_build_run/Dockerfile
+++ b/flavors/test-Exasol-8-cuda-ml/flavor_base/flavor_test_build_run/Dockerfile
@@ -2,22 +2,22 @@ FROM {{base_test_build_run}}
 
 RUN mkdir -p /conf /buckets
 
-COPY --from={{flavor_customization}} /usr /usr
+COPY --from={{flavor_base_deps}} /usr /usr
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /opt /opt
+COPY --from={{flavor_base_deps}} /opt /opt
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /lib /lib
+COPY --from={{flavor_base_deps}} /lib /lib
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /bin /bin
+COPY --from={{flavor_base_deps}} /bin /bin
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /etc /etc
+COPY --from={{flavor_base_deps}} /etc /etc
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /build_info /build_info
+COPY --from={{flavor_base_deps}} /build_info /build_info
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
 
