--- a/flavors/test-Exasol-8-cuda-ml/flavor_base/release/Dockerfile
+++ b/flavors/test-Exasol-8-cuda-ml/flavor_base/release/Dockerfile
@@ -31,28 +31,28 @@ COPY --from={{language_deps}} /scripts /scripts
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
 
-COPY --from={{flavor_customization}} /usr /usr
+COPY --from={{flavor_base_deps}} /usr /usr
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /lib /lib
+COPY --from={{flavor_base_deps}} /lib /lib
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /bin /bin
+COPY --from={{flavor_base_deps}} /bin /bin
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /opt /opt
+COPY --from={{flavor_base_deps}} /opt /opt
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /etc /etc
+COPY --from={{flavor_base_deps}} /etc /etc
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /build_info /build_info
+COPY --from={{flavor_base_deps}} /build_info /build_info
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /var /var
+COPY --from={{flavor_base_deps}} /var /var
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{flavor_customization}} /root /root
+COPY --from={{flavor_base_deps}} /root /root
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
 RUN ldconfig
