#1026 create test cuda ml flavor (#483)
related to exasol/script-languages-release#1026

--- a/aws-code-build/ci/buildspec.yaml
+++ b/aws-code-build/ci/buildspec.yaml
@@ -34,3 +34,10 @@ batch:
         compute-type: BUILD_GENERAL1_MEDIUM
         privileged-mode: true
       buildspec: ./aws-code-build/ci/build_buildspec.yaml
+    - identifier: build_test_Exasol_8_cuda_ml
+      env:
+        variables:
+          FLAVOR: test-Exasol-8-cuda-ml
+        compute-type: BUILD_GENERAL1_MEDIUM
+        privileged-mode: true
+      buildspec: ./aws-code-build/ci/build_buildspec.yaml
