Added comment to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [tool.poetry]
 package-mode = false
 name = "exasol-script-languages"
+# should we increase this version?
+# Are there other files that need to be updated?
 version = "8.1.0"
 description = "Script Languages"
 
