Changed matrix parameter name in test_package_management_scripts.yaml

--- a/.github/workflows/test_package_management_scripts.yaml
+++ b/.github/workflows/test_package_management_scripts.yaml
@@ -16,19 +16,19 @@ jobs:
           - test_script: "bash run_tests.sh"
             working_dir: "ext/scripts/tests/install_scripts"
             name: "Test install scripts dry-run"
-            install_deps: 0
+            install_dependencies: false
           - test_script: "bash test_scripts_in_docker.sh"
             working_dir: "ext/scripts/tests/"
             name: "Test install scripts in docker container"
-            install_deps: 0
+            install_dependencies: false
           - test_script: "bash test_python_scripts_in_slim_docker.sh"
             working_dir: "ext/scripts/tests/"
             name: "Test PIP install scripts in slim docker container"
-            install_deps: 0
+            install_dependencies: false
           - test_script: "bash run_tests.sh "
             working_dir: "ext/scripts/tests/list_installed_scripts"
             name: "Test list installed scripts"
-            install_deps: 1
+            install_dependencies: true
 
 
     steps:
@@ -36,12 +36,12 @@ jobs:
     
     - name: Install Python
       uses: actions/setup-python@v5
-      if: matrix.install_deps == 1
+      if: matrix.install_deps == true
       with:
         python-version: "3.10"
 
     - name: Install R
-      if: matrix.install_deps == 1
+      if: matrix.install_deps == true
       uses: r-lib/actions/setup-r@v2
 
     - name: Init submodules
