--- a/.github/workflows/test_package_management_scripts.yaml
+++ b/.github/workflows/test_package_management_scripts.yaml
@@ -36,12 +36,12 @@ jobs:
     
     - name: Install Python
       uses: actions/setup-python@v5
-      if: matrix.install_deps == true
+      if: matrix.install_dependencies == true
       with:
         python-version: "3.10"
 
     - name: Install R
-      if: matrix.install_deps == true
+      if: matrix.install_dependencies == true
       uses: r-lib/actions/setup-r@v2
 
     - name: Init submodules
