--- a/flavors/template-Exasol-all-java-17/flavor_base/build_run/Dockerfile
+++ b/flavors/template-Exasol-all-java-17/flavor_base/build_run/Dockerfile
@@ -27,6 +27,7 @@ COPY /exaudfclient /exaudfclient
 WORKDIR /exaudfclient/
 RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config java --config fast-binary"]
 RUN cp -r -L bazel-bin/* /exaudf && rm -r /exaudf/external
+RUN rm -r /root/.cache/bazel #Delete bazel cache as it contains java rules with special characters which will cause a problem for Bucketfs
 
 WORKDIR /exaudfclient/base
 RUN ./test_udfclient.sh /exaudf/exaudfclient
