--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,12 @@ python = ">=3.10,<4"
 exasol-script-languages-container-tool = "^2.0.0"
 exasol-script-languages-container-ci = "^1.7.0"
 exasol-script-languages-container-ci-setup = "^1.7.0"
+exasol-error-reporting = "<1.0.0"
 
 [tool.poetry.dev-dependencies]
 toml = ">=0.10.2"
 gitpython = ">=3.1.0"
+nox = ">=2022.8.7"
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
