--- a/flavors/template-Exasol-all-java-17/flavor_base/udfclient_deps/Dockerfile
+++ b/flavors/template-Exasol-all-java-17/flavor_base/udfclient_deps/Dockerfile
@@ -24,3 +24,5 @@ ENV PROTOBUF_LIBRARY_PREFIX=/usr/lib/
 ENV PROTOBUF_INCLUDE_PREFIX=/usr/include/
 ENV ZMQ_LIBRARY_PREFIX=/usr/lib
 ENV ZMQ_INCLUDE_PREFIX=/usr/include
+ENV OPENSSL_LIBRARY_PREFIX=/usr/lib/x86_64-linux-gnu
+ENV OPENSSL_INCLUDE_PREFIX=/usr/include/openssl
