--- a/exaudfclient/.env.template
+++ b/exaudfclient/.env.template
@@ -4,4 +4,6 @@ export PYTHON3_VERSION=
 export PROTOBUF_BIN=
 export PROTOBUF_LIBRARY_PREFIX=
 export PROTOBUF_INCLUDE_PREFIX=
+export OPENSSL_LIBRARY_PREFIX=
+export OPENSSL_INCLUDE_PREFIX=
 export VERBOSE_BUILD= #"--subcommands --verbose_failures"
