--- a/.github/workflows/oft.yaml
+++ b/.github/workflows/oft.yaml
@@ -11,12 +11,11 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup Python & Poetry Environment
         uses: exasol/python-toolbox/.github/actions/python-environment@0.12.0
         with:
           python-version: "3.10"
-          poetry-version: '1.8.2'
+          poetry-version: "1.8.2"
       - name: Run HTML Report
         run: |
           poetry run nox -s run-oft-html -- -- oft_report.html || echo failed
