--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -40,10 +40,10 @@ jobs:
             java_version: "openjdk-17-jdk"
           - test: "//base/javacontainer/test:javacontainer-test-extractor-legacy"
             name: "javacontainer-test-extractor-legacy"
-            java_version: ""
+            java_version: "openjdk-11-jdk"
           - test: "//base/javacontainer/test:javacontainer-test-extractor-v2"
             name: "javacontainer-test-extractor-v2"
-            java_version: ""
+            java_version: "openjdk-11-jdk"
           - test: "//base/javacontainer/script_options/..."
             name: "javacontainer-script_options"
             java_version: ""
@@ -58,10 +58,10 @@ jobs:
             java_version: ""
           - test: "--run_under='valgrind --leak-check=yes' --config=valgrind //base/javacontainer/test:javacontainer-test-extractor-legacy"
             name: "javacontainer-test-extractor-legacy-with-valgrind"
-            java_version: ""
+            java_version: "openjdk-11-jdk"
           - test: "--run_under='valgrind --leak-check=yes' --config=valgrind //base/javacontainer/test:javacontainer-test-extractor-v2"
             name: "javacontainer-test-extractor-v2-with-valgrind"
-            java_version: ""
+            java_version: "openjdk-11-jdk"
           - test: "--run_under='valgrind --leak-check=yes' --config=valgrind //base/script_options_parser/ctpg/..."
             name: "script_options_parser_ctpg_with_valgrind"
             java_version: ""
@@ -70,10 +70,10 @@ jobs:
             java_version: ""
           - test: "--config=asan //base/javacontainer/test:javacontainer-test-extractor-legacy"
             name: "javacontainer-test-extractor-legacy-with-asan"
-            java_version: ""
+            java_version: "openjdk-11-jdk"
           - test: "--config=asan //base/javacontainer/test:javacontainer-test-extractor-v2"
             name: "javacontainer-test-extractor-v2-with-asan"
-            java_version: ""
+            java_version: "openjdk-11-jdk"
           - test: "--config=asan //base/script_options_parser/ctpg/..."
             name: "script_options_parser_ctpg_with_asan"
             java_version: ""
