--- a/scripts/generate_package_diffs_for_flavors/pyproject.toml
+++ b/scripts/generate_package_diffs_for_flavors/pyproject.toml
@@ -11,7 +11,7 @@ tabulate = "^0.9.0"
 click = "^8.0.1"
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
