--- a/.github/workflows/test_slc.yaml
+++ b/.github/workflows/test_slc.yaml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        flavor: ${{fromJson(needs.detect-test-sets.outputs.test-sets)}}
+        test-set: ${{fromJson(needs.detect-test-sets.outputs.test-sets)}}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python & Poetry Environment
@@ -66,7 +66,7 @@ jobs:
           name: slc_${{inputs.flavor}}
           path: "slc"
 
-      - name: Run Test-Set ${{ matrix.name }}
+      - name: Run Test-Set ${{ matrix.test-set.name }}
         run: |
-          echo Found folders: "${{ matrix.folders }}"
+          echo Found folders: "${{ matrix.test-set.folders }}"
           sleep 600
